--- a/src/components/header/search/search.module.css
+++ b/src/components/header/search/search.module.css
@@ -22,3 +22,10 @@
     height: 300px;
     background-color: red;
 }
+
+@media(max-width:480px) {
+    .inputHolder {
+        position: static;
+        
+    }
+}
