--- a/src/components/Cast/Cast.module.css
+++ b/src/components/Cast/Cast.module.css
@@ -15,12 +15,9 @@
 .peopleholder img {
     object-fit:cover;
     width: 100%;
-    height: 150px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-radius: 5px;
+    overflow: hidden;
     display: block;
-
-    
 }
 
 .peopleholder .Name {
@@ -32,6 +29,8 @@
     bottom: 0;
     left: 0;
     right: 0;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
     background-color: #fff;
 }
 
