--- a/src/components/Episodes/Episode/Episode.module.css
+++ b/src/components/Episodes/Episode/Episode.module.css
@@ -16,6 +16,8 @@
 
 .Episode {
     display: flex;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
 }
 
@@ -30,6 +32,7 @@
 
 
 .iconBackground {
+    
     cursor: pointer;
     display: flex;
     justify-content: center;
