--- a/src/components/header/search/search.module.css
+++ b/src/components/header/search/search.module.css
@@ -19,13 +19,30 @@
 }
 
 .seachHolder {
-    height: 300px;
-    background-color: red;
+    
+    margin-top: -3px;
+    background-color: #394047;
+    transition: background-color 2s ease-out;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.seachHolder:focus {
+    background-color: green;
+}
+
+.LoadingContainer {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    padding-bottom: 20px;
 }
 
 @media(max-width:480px) {
     .inputHolder {
-        position: static;
-        
+        top: 0;
     }
 }
