--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -55,6 +55,10 @@
     align-content: center;
 }
 
+.Menuicon {
+    cursor: pointer;
+}
+
 .ProfileDetails button {
     color: #ffffff;
     padding: 7px 12px;
