--- a/src/pages/Login/login.module.css
+++ b/src/pages/Login/login.module.css
@@ -6,7 +6,6 @@
 }
 
 .formContainer {
-
     padding:20px 30px;
     width: 50%;
 }
@@ -52,4 +51,10 @@
     color: red;
     cursor: pointer;
     text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+    .formContainer {
+        width: 100%;
+    }
 }
