--- a/src/pages/Popular/Popular.module.css
+++ b/src/pages/Popular/Popular.module.css
@@ -8,7 +8,7 @@
 
 .DataContainer {
     display: grid;
-    grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
+    grid-template-columns: repeat(auto-fill,minmax(160px, 1fr));
 }
 
 
