--- a/src/pages/Genre/genre.module.css
+++ b/src/pages/Genre/genre.module.css
@@ -1,142 +1,141 @@
 .container {
-    padding: 0 4em;
+  padding: 0 4em;
+  min-height: 51em;
 }
 
 .Heading {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .DataContainer {
-    display: grid;
-    grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
 }
 
 .Type {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .FilterArea {
-    margin: 20px 0;
-    display: flex;
-    
+  margin: 20px 0;
+  display: flex;
 }
 
 .Filter {
-    margin-right: 10px;
-    color: grey;
-    display: flex;
-    align-items: center;
+  margin-right: 10px;
+  color: grey;
+  display: flex;
+  align-items: center;
 }
 
 .Type h5 {
-    margin-right: 10px;
-    cursor: pointer;
-    color: gray;
-    margin-bottom: 5px;
-    border-bottom: 2px solid transparent;
+  margin-right: 10px;
+  cursor: pointer;
+  color: gray;
+  margin-bottom: 5px;
+  border-bottom: 2px solid transparent;
 }
 
 .Type h5.active {
-    border-bottom: 2px solid #b41010;
+  border-bottom: 2px solid #b41010;
 }
 .Type h5:hover {
-    color: #fff;
-    border-bottom: 2px solid #b41010;
+  color: #fff;
+  border-bottom: 2px solid #b41010;
 }
 
 .popupforRelease {
-    width: 300px;
-    padding: 10px 25px;
+  width: 300px;
+  padding: 10px 25px;
+}
+
+.popupforRelease .row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .popupforGenre {
-    width: 500px;
-
-
+  width: 500px;
 }
 
 .genreRow {
-    padding: 10px;
-    display: flex;
-        flex-wrap: wrap;
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-
-    
 .genreOption {
-    flex: 50%;
-    padding: 5px;
-    padding-left: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 1px;
+  flex: 50%;
+  padding: 5px;
+  padding-left: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 1px;
 }
 
 .selected {
-    background-color: black;
-    color: #fff;
+  background-color: black;
+  color: #fff;
 }
 
 .genreOption:hover {
-    background-color: gainsboro;
+  background-color: gainsboro;
 }
 
+@media (max-width: 480px) {
+  .container {
+    padding: 0 1em;
+  }
 
+  .DataContainer {
+    display: grid;
+    grid-template-columns: auto auto auto;
+  }
+  .FilterArea {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: block;
+  }
+  .Type {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 10px;
+  }
 
-@media (max-width:480px) {
-    .container {
-        padding: 0 1em;
-    }
+  .Type .typeBtnHolder {
+    width: 100%;
+    margin-right: 5px;
+  }
 
-    .DataContainer {
-        display: grid;
-        grid-template-columns: auto auto auto;
-}
-    .FilterArea {
-        margin-top: 10px;
-        margin-bottom: 10px;
-        display: block;
+  .Type .typeBtnHolder button {
+    width: 100%;
+  }
 
-    }
-    .Type {
-        display: flex;
-        justify-content:space-around;
-        margin-top: 10px;
-    }
+  .Type h5 {
+    width: 100%;
+    text-align: center;
+    margin-right: 0;
+  }
+  .Filter {
+    display: none;
+  }
 
-    .Type .typeBtnHolder {
-        width: 100%;
-        margin-right: 5px;
-    }
+  .popupforRelease {
+    width: 300px;
+    padding: 10px 25px;
+  }
 
-    .Type .typeBtnHolder button {
-        width: 100%;
-    }
-
-    .Type h5 {
-        width:100%;
-        text-align: center;
-        margin-right: 0;
-    }
-    .Filter {
-        display:none;
-    }
-
-    .popupforRelease {
-        width: 300px;
-        padding: 10px 25px;
-    }
-    
-    .popupforGenre {
-        width: 100%;
-    }
+  .popupforGenre {
+    width: 100%;
+  }
 }
 
-@media (min-width:481px) and (max-width:1366px) {
-    .DataContainer {
-        display: grid;
-        grid-template-columns: auto auto auto auto auto;
-    }
+@media (min-width: 481px) and (max-width: 1366px) {
+  .DataContainer {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+  }
 }
