--- a/src/pages/Watched/Watched.module.css
+++ b/src/pages/Watched/Watched.module.css
@@ -1,31 +1,30 @@
 .container {
-    padding: 0 4em;
+  padding: 0 4em;
+  min-height: 87vh;
 }
 
 .Heading {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .DataContainer {
-    
-    display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(160px, 1fr));
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
 }
 
-
-@media (max-width:480px) {
-    .container {
+@media (max-width: 480px) {
+  .container {
     padding: 0 1em;
-}
-    .DataContainer {
+  }
+  .DataContainer {
     display: grid;
     grid-template-columns: auto auto auto;
-}
+  }
 }
 
-@media (min-width:481px) and (max-width:1366px) {
-    .DataContainer {
-        display: grid;
-        grid-template-columns: auto auto auto auto auto;
-    }
+@media (min-width: 481px) and (max-width: 1366px) {
+  .DataContainer {
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+  }
 }
