--- a/src/pages/Login/login.module.css
+++ b/src/pages/Login/login.module.css
@@ -1,60 +1,63 @@
 .LoginContainer {
-    width: 100%;
-    display: grid;
-    place-items: center;
-    
+  padding: 20px;
+  width: 100%;
+  display: grid;
+  place-items: center;
 }
 
 .formContainer {
-    padding:20px 30px;
-    width: 50%;
+  padding: 20px 30px;
+  width: 100%;
 }
 
 .inputHolder {
-    display: block;
-    
-    padding-bottom: 20px;
-    
+  display: block;
+  padding-bottom: 20px;
 }
 
 .inputHolder label {
-    width: 100%;
+  width: 100%;
+  color: #fff;
 }
 
 .inputHolder input {
-    width: 100%;
-    border-radius:5px;
-    outline: none;
-    border: none;
-    padding: 10px;
-    font-size:14px;
-    border:1px solid grey;
+  width: 100%;
+  margin-top: 5px;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  padding: 10px;
+  font-size: 14px;
+  border: 1px solid #292c2e;
+  background-color: #394047;
+  color: #fff;
 }
 
 .LoginButton {
-    padding: 10px;
-    border: none;
-    font-size:14px;
-    width: 100px;
-    border-radius: 5px;
-    background-color:#1c252f;
-    color: #fff;
+  padding: 10px;
+  border: none;
+  font-size: 14px;
+  width: 100px;
+  border-radius: 5px;
+  background-color: red;
+  color: #fff;
+  cursor: pointer;
 }
 
 .LoginButton:hover {
-    background-color: #394047;
+  background-color: rgb(207, 7, 7);
 }
 
 .bottomButton {
-    margin-top: 10px;
-    font-size: 14px;
-    color: red;
-    cursor: pointer;
-    text-decoration: underline;
+  margin-top: 10px;
+  font-size: 14px;
+  color: #fff;
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 @media (max-width: 768px) {
-    .formContainer {
-        width: 100%;
-    }
+  .formContainer {
+    width: 100%;
+  }
 }
