--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,22 @@ code {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  scrollbar-width: thin;
+  scrollbar-color: #515151 transparent;
 }
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #515151;
+  border-radius: 20px;
+  border: 3px solid transparent;
+}
+
