--- a/src/pages/Genre/genre.module.css
+++ b/src/pages/Genre/genre.module.css
@@ -9,7 +9,7 @@
 
 .DataContainer {
   display: grid;
-  grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
+  grid-template-columns: auto auto auto auto auto auto auto auto;
 }
 
 .Type {
