--- a/src/pages/Watchlist/Watchlist.module.css
+++ b/src/pages/Watchlist/Watchlist.module.css
@@ -7,6 +7,9 @@
   margin-bottom: 20px;
 }
 
+.movieItemContainer {
+  position: relative;
+}
 .DataContainer {
   /* display: flex;
     flex-wrap: wrap;
