--- a/src/components/Cast/Cast.module.css
+++ b/src/components/Cast/Cast.module.css
@@ -1,42 +1,45 @@
 .PeopleContainer {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .peopleholder {
-    margin: 3px;
-    position: relative;
+  margin: 3px;
+  position: relative;
 }
 
 .DataHolder {
-    margin-top: 10px;
-    padding: 0 20px;
+  margin-top: 10px;
+  padding: 0 20px;
 }
 
 .peopleholder img {
-    object-fit:cover;
-    width: 100%;
-    border-radius: 5px;
-    overflow: hidden;
-    display: block;
+  object-fit: cover;
+  width: 100%;
+  border-radius: 5px;
+  overflow: hidden;
+  display: block;
 }
 
 .peopleholder .Name {
-    padding: 5px;
-    font-size: 12px;
-    display: block;
-    position: absolute;
-    z-index: 5;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    background-color: #fff;
+  padding: 3px;
+  line-clamp: 2;
+  height: 17px;
+  overflow: ellipsis;
+  font-size: 10px;
+  display: block;
+  position: absolute;
+  z-index: 5;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  background-color: #fff;
 }
 
 .peopleholder {
-    background-color: #fff;
-    color: black;
-    text-align: center;
-    border-radius: 5px;
+  background-color: #fff;
+  color: black;
+  text-align: center;
+  border-radius: 5px;
 }
