--- a/src/components/header/search/search.module.css
+++ b/src/components/header/search/search.module.css
@@ -1,48 +1,56 @@
 .inputHolder {
-    box-sizing: border-box;
-    width: 100%;
-    top: -19px;
-    position: absolute;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .inputHolder input {
-    width: 100%;
-    box-sizing: border-box;
-    padding: 7px 15px;
-    font-size: 16px;
-    outline: none;
-    border: none;
-    background-color: #394047;
-    color: #fff;
-    font-weight: 400;
-    border-radius: 5px;
+  width: 100%;
+  box-sizing: border-box;
+  padding-left: 15px;
+  padding-right: 15px;
+  height: 100%;
+  font-size: 16px;
+  outline: none;
+  border: none;
+  background-color: #394047;
+  color: #fff;
+  font-weight: 400;
+  border-radius: 5px;
 }
 
 .seachHolder {
-    
-    margin-top: -3px;
-    background-color: #394047;
-    transition: background-color 2s ease-out;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  margin-top: -3px;
+  background-color: #394047;
+  transition: background-color 2s ease-out;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  max-height: 400px;
+  overflow-y: auto;
+  z-index: 10;
 }
 
 .seachHolder:focus {
-    background-color: green;
+  background-color: green;
 }
 
 .LoadingContainer {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: center;
-    padding-bottom: 20px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  padding-bottom: 20px;
 }
 
-@media(max-width:480px) {
-    .inputHolder {
-        top: 0;
-    }
+@media (max-width: 480px) {
+  .inputHolder {
+    top: 0;
+  }
 }
